--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.12"
+    "@storybook/react": "^6.3.12",
+    "@testing-library/react-hooks": "^7.0.2"
   }
 }
