--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.23.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
